--- a/views/module/index.ejs
+++ b/views/module/index.ejs
@@ -24,8 +24,7 @@
           <table class="table table-striped table-hover table-bordered dataTable no-footer" id="editabledatatable" aria-describedby="editabledatatable_info">
             <thead>
             <tr role="row">
-              <th rowspan="1" colspan="1" style="min-width: 30px;">ID</th>
-              <th rowspan="1" colspan="1" style="min-width: 80px;">名称</th>
+              <th rowspan="1" colspan="1" style="min-width: 120px;">名称</th>
               <th rowspan="1" colspan="1" style="min-width: 80px;">导航</th>
               <th rowspan="1" colspan="1" style="min-width: 80px;">描述</th>
               <th rowspan="1" colspan="1" style="min-width: 80px;">Tag</th>
@@ -61,9 +60,7 @@
 <script type="text/javascript">
   function createRow(m,row,lv){
     lv=lv ||0;
-    var str="<tr id='row"+m.id+"'>\
-      <td>"+m.id+"</td>\
-      <td>";
+    var str="<tr id='row"+m.id+"'><td>";
     //str+="<span class='shiny icon-only glyphicon glyphicon-"+m.icon+"' />";
     if(lv>0){
       str+="|";
@@ -73,7 +70,7 @@
     }
     str+=m.name;
 
-    str+="<span class='shiny icon-only glyphicon glyphicon-"+m.icon+"' />"+"</td>";
+    str+="<span class='pull-right shiny icon-only glyphicon glyphicon-"+m.icon+"' />"+"</td>";
 
     str+="<td>"+(m.showInNav?'是':'否')+"</td>\
       <td>"+m.desc+"</td>\
